Graph.getRoom JavaDoc Graph.getRoom
Instead of returning a Room instantiation everytime a given name is found in the vertices, now it will return the already instantiated Room by checking if the name is equal and as well if that vertex with the same name is an instance of Room.